add opens to security.